@@ -5,8 +5,15 @@ type TemplateConfig struct {
 	Name         string           `config:"name"`
 	Fields       string           `config:"fields"`
 	Overwrite    bool             `config:"overwrite"`
-	OutputToFile string           `config:"output_to_file"`
 	Settings     templateSettings `config:"settings"`
+	OutputToFile OutputToFile     `config:"output_to_file"`
+}
+
+// OutputToFile contains the configuration options for generating
+// and writing the template into a file.
+type OutputToFile struct {
+	Path    string `config:"path"`
+	Version string `config:"version"`
 }
 
 type templateSettings struct {
